--- a/src/multi-input.scss
+++ b/src/multi-input.scss
@@ -34,6 +34,10 @@
       margin-top: 22px;
       margin-right: 54px;
     }
+
+    hr {
+      transition: none !important;
+    }
   }
 
   &-card-actions {
